Switch GWC to Java 11